--- a/jira-stylebot.css
+++ b/jira-stylebot.css
@@ -47,3 +47,32 @@
 #jira .activity-comment:nth-child(2n) {
   background-color: #fafafa;
 }
+
+#jira .activity-comment:nth-child(2n) {
+    background-color: #fafafa;
+}
+
+#jira .activity-comment .action-details {
+    color: #666;
+    font-size: 12px;
+}
+
+#jira .activity-comment .user-avatar {
+    font-weight: 600;
+    font-size: 14px;
+}
+
+#jira .issue-list .issue-link-key {
+    font-weight: bold;
+}
+
+#jira .issue-list .issue-link-summary {
+    font-size: 13px;
+}
+
+#jira .issue-container.skinny #activitymodule #issue-tabs {
+    margin-left: -15px;
+    margin-right: -15px;
+    width: 100%;
+}
+
