--- a/jira-stylebot.css
+++ b/jira-stylebot.css
@@ -70,7 +70,7 @@
     font-size: 13px;
 }
 
-#jira .issue-list .issue-list .focused {
+#jira .issue-list .focused {
   border-left: 5px solid #3572b0;
 }
 
