fixed styling formatting

--- a/jira-stylebot.css
+++ b/jira-stylebot.css
@@ -1,51 +1,47 @@
 #jira div.issue-body-content {
-  border-top: 1px solid #eee;
-  background: #f8f8f8;
-  padding: 15px;
+    border-top: 1px solid #eee;
+    background: #f8f8f8;
+    padding: 15px;
 }
 
 #jira #summary-val {
-  font-size: 20px;
+    font-size: 20px;
 }
 
 #jira div.module.toggle-wrap {
-  background: #fff;
-  border: none;
-  position: relative;
-  margin-top: 30px;
-  padding-top: 0;
-  border-radius: 2px;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
+    background: #fff;
+    border: none;
+    position: relative;
+    margin-top: 30px;
+    padding-top: 0;
+    border-radius: 2px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
 }
 
 #jira .toggle-wrap .mod-header {
-  background: none;
-  padding: 8px 0 3px;
-  border-bottom: 1px solid #e6e6e6;
+    background: none;
+    padding: 8px 0 3px;
+    border-bottom: 1px solid #e6e6e6;
 }
 
 #jira .toggle-wrap .mod-header h2 {
-  text-transform: uppercase;
-  color: #205081;
-  font-size: 15px;
+    text-transform: uppercase;
+    color: #205081;
+    font-size: 15px;
 }
 
 #jira .toggle-wrap .toggle-title {
-  margin-left: 0;
-  background-color: transparent;
-  /* color: #fff; */
+    argin-left: 0;
+    ackground-color: transparent;
+    * color: #fff; */
 }
 
 #jira .toggle-wrap .mod-content {
-  padding: 0px 20px 15px;
+    padding: 0px 20px 15px;
 }
 
 #jira #attachmentmodule .mod-content.issue-drop-zone {
-  margin-left: 0;
-}
-
-#jira .activity-comment:nth-child(2n) {
-  background-color: #fafafa;
+    margin-left: 0;
 }
 
 #jira .activity-comment:nth-child(2n) {
@@ -71,7 +67,7 @@
 }
 
 #jira .issue-list>.focused {
-  border-left: 5px solid #3572b0;
+    border-left: 5px solid #3572b0;
 }
 
 #jira .issue-container.skinny #activitymodule .tabwrap {
@@ -81,6 +77,6 @@
 }
 
 #jira .issue-container.skinny #activitymodule #issue-tabs {
-  padding: 0 10px;
+    padding: 0 10px;
 }
 
