--- a/jira-stylebot.css
+++ b/jira-stylebot.css
@@ -65,9 +65,6 @@
     font-size: 13px;
 } 
 
-#jira .issue-list > .focused {
-    border-left: 5px solid #3572b0;
-}
 
 #jira .issue-container.skinny #activitymodule .tabwrap {
     margin-left: -15px;
@@ -77,5 +74,27 @@
 
 #jira .issue-container.skinny #activitymodule #issue-tabs {
     padding: 0 10px;
+}
+
+#jira .details-layout .split-view .list-results-panel {
+    padding-left: 0;
+}
+
+#jira .details-layout .split-view .list-results-panel .list-panel {
+    padding: 0;
+}
+
+#jira .details-layout .split-view .list-results-panel .list-ordering {
+    text-transform: uppercase;
+    border-bottom: 2px solid #ccc;
+}
+
+#jira .details-layout .split-view .list-results-panel .list-panel .issue-list>li {
+    padding-left: 10px;
+}
+
+#jira .issue-list > .focused {
+    border-left: 5px solid #3572b0;
+    padding-left: 5px;
 }
 
