fixed styling formatting

--- a/jira-stylebot.css
+++ b/jira-stylebot.css
@@ -71,7 +71,7 @@
   width: 100%;
 }
 
-#jira .issue-container.skinny #activitymodule #issue-tabs {
+#jira #issue-tabs {
   padding: 0 10px;
 }
 
@@ -92,7 +92,7 @@
   padding-left: 10px;
 }
 
-#jira .issue-list > .focused {
+.issue-list > .focused {
   border-left: 5px solid #3572b0;
   padding-left: 5px;
 }
