--- a/jira-stylebot.css
+++ b/jira-stylebot.css
@@ -138,7 +138,7 @@
   padding-right: 0px;
 }
 
-// Kanban board styling.
+/* Kanban board styling. */
 #ghx-header .subnav-container {
   display: none;
 }
